--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@
 # Username and password
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/springbootfirstapp
 spring.datasource.username=root
-#spring.datasource.password = root
+spring.datasource.password = root
 #spring.datasource.url = jdbc:mysql://localhost:3306/todo
 #spring.datasource.username = root
 #spring.datasource.password = 1q2w3e4r
