--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 # Connection url for the database "netgloo_blog"
 # Username and password
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/springbootfirstapp
-spring.datasource.url=jdbc:mysql://207.154.225.93:6603/wordtreasueapp
+spring.datasource.url=jdbc:mysql://207.154.225.93:6603/wordtreasureapp
 spring.datasource.username=root
 spring.datasource.password = fanswho12
 #spring.datasource.url = jdbc:mysql://localhost:3306/todo
