--- a/pom.xml
+++ b/pom.xml
@@ -108,8 +108,7 @@
                 </configuration>
             </plugin>
         </plugins>
-
-
+        <finalName>${project.artifactId}</finalName>
     </build>
 
 
