--- a/pom.xml
+++ b/pom.xml
@@ -110,20 +110,11 @@
 
             <plugin>
                 <!-- Build an executable JAR -->
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.0.2</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>com.word.WordApplication</mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
+
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-            
+
         </plugins>
         <finalName>${project.artifactId}</finalName>
     </build>
