--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/springbootfirstapp
 spring.datasource.url=jdbc:mysql://207.154.225.93:6603/wordtreasureapp
 spring.datasource.username=root
+#spring.datasource.password=root
 spring.datasource.password=fanswho12
 #spring.datasource.url = jdbc:mysql://localhost:3306/todo
 #spring.datasource.username = root
@@ -21,7 +22,7 @@ spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # the project
 # schema will be automatically updated accordingly to java entities found in
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 # Naming strategy
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 # Allows Hibernate to generate SQL optimized for a particular DBMS
