--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,12 @@
 # Set here configurations for the database connection
 # Connection url for the database "netgloo_blog"
 # Username and password
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/springbootfirstapp
-spring.datasource.url=jdbc:mysql://207.154.225.93:6603/wordtreasureapp?useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/springbootfirstapp
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://207.154.225.93:6603/wordtreasureapp?useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
 #spring.datasource.password=root
-spring.datasource.password=fanswho12
+#spring.datasource.password = root
 #spring.datasource.url = jdbc:mysql://localhost:3306/todo
 #spring.datasource.username = root
 #spring.datasource.password = 1q2w3e4r
@@ -22,9 +23,11 @@ spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # the project
 # schema will be automatically updated accordingly to java entities found in
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 # Naming strategy
-spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+#spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
+spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL5InnoDBDialect
 spring.data.jpa.repositories.enabled=true
