--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/springbootfirstapp
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://207.154.225.93:6603/wordtreasureapp?useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.password=root
 #spring.datasource.password = root
 #spring.datasource.url = jdbc:mysql://localhost:3306/todo
 #spring.datasource.username = root
